force-app/main/default/objects/ssot__CourseOfferingAttendance__dlm/fields/ssot__AttendanceDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AttendanceDate__c</fullName>
    <label>AttendanceDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AttendanceDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Date</type>
</CustomField>