force-app/main/default/objects/ssot__CourseOfferingAttendance__dlm/fields/ssot__InstructonType__c.field-meta.xml
<CustomField>
    <fullName>ssot__InstructonType__c</fullName>
    <label>Instruction Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InstructonType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>