force-app/main/default/objects/ssot__CourseOfferingAttendance__dlm/fields/ssot__IsExcused__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsExcused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Excused</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsExcused</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>