force-app/main/default/objects/ssot__CourseOfferingAttendance__dlm/fields/ssot__rel_1719820267386_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719820267386_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOfferingAttendance_CourseOffer_rel</label>
    <referenceTo>ssot__CourseOfferingParticipant__dlm</referenceTo>
    <relationshipLabel>CourseOfferingAttendance_CourseOffer_rel</relationshipLabel>
    <relationshipName>rel_1719820267386_end</relationshipName>
    <type>Lookup</type>
</CustomField>